--- a/functions/js.html
+++ b/functions/js.html
@@ -1,2 +1,2 @@
-<html><body><pre><script src="apply_invocations.js">
+<html><body><pre><script src="method_invocation.js">
 </script></pre></body></html>`
